Fix for spacing on mobile.

--- a/css/projects.scss
+++ b/css/projects.scss
@@ -360,6 +360,9 @@ html, body {
 			right:auto;
 			text-align:center;
 		}
+		h1 {
+			margin-top:1em;
+		}
 	}
 
 	/* Nuview
